--- a/package.json
+++ b/package.json
@@ -12,12 +12,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/passport": "^1.0.15",
+    "@types/passport-jwt": "^3.0.13",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "mongo": "^0.1.0",
     "mongoose": "^7.6.3",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
